--- a/Assets/CSS/stylesheet.css
+++ b/Assets/CSS/stylesheet.css
@@ -6,23 +6,136 @@
     src: url(../Fonts/Raleway-Regular.ttf), url(../Fonts/Raleway-Italic.ttf), url(../Fonts/Raleway-Bold.ttf), format('truetype') ;
 }
 
-.frame{
-    width: 150px;
-    height: 150px;
+body{
+    width: 1160px;
+    font-family: "Raleway", sans-serif;
+    padding-left: 300px;
+    padding-right: 300px;
 }
 
-.frame__portrait{
+h1, h2, h3, h4{
+    font-family: "Lato", sans-serif;
+}
+
+h2{
+    margin-top: -5px;
+}
+
+#en-tête{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #782221;
+    color: white;
+}
+
+#cadre{
+    width: 150px;
+    height: 150px;
+    margin-top: 40px;
+}
+
+#portrait{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0 0 10px #dbc2a4;
+    cursor: zoom-in;
 }
 
-.pied-de-page__instagram{
-    width: 25px;
-    height: 25px;
+address{
+    border: 1px solid #2c1d27;
+    background-color: #2c1d27;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-.pied-de-page__github{
-    width: 25px;
-    height: 25px;
+a{
+    color: white;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+main{
+    display: flex;
+}
+
+#colonne-gauche{
+    flex: 1 1 25%;
+    background-color: #782221;
+    padding: 13px;
+    padding-right: 50px;
+    color: white;
+}
+
+#colonne-gauche h3{
+    color: black;
+    background-color: #dbc2a4;
+    margin-left: -13px;
+    padding: 5px;
+    padding-left: 15px;
+}
+
+#colonne-gauche p{
+    text-indent: 30px;
+}
+
+#colonne-droite{
+    flex: 1 1 75%;
+    padding: 15px;
+    padding-left: 40px;
+    border-right: 2px solid black;
+}
+
+#colonne-droite h3{
+    background-color: #dbc2a4;
+    padding: 5px;
+    border-left:6px solid #782221;
+}
+
+h4:hover{
+    border-right: 5px solid #782221;
+}
+
+#instagram{
+    width: 40px;
+    height: 40px;
+    padding: 6px;
+}
+
+#github{
+    width: 40px;
+    height: 40px;
+    padding: 6px;
+}
+
+#pied-de-page{
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+
+#pied-de-page a:hover{
+    opacity: 0.6;
+}
+
+small{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+    color: white;
+}
+
+footer{
+    background-color: #782221;
 }
